Bug fix
Fixed modal not showing for mobile

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -78,7 +78,7 @@ a{
 	#list, #map-container{
 		width: 100%;
 	}
-	.ui.menu, .ui.button, .ui.mini.modal{
+	.ui.menu, .ui.button, .ui.modal{
 		font-size: 2.5rem;
 	}
 	h2{
